# lidar_camera_calibration

./: setup.py
calibration_data/: ost.yml
calibration_data/camera_calibration/: ost.yaml
calibration_data/lidar_camera_calibration/: T.npy  euler.npy  extrinsics.npz
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lidar_camera_calibration/lib/calibration_data/lidar_camera_calibration/: extrinsics.npz  img_corners.npy
install/lidar_camera_calibration/share/ament_index/resource_index/package_run_dependencies/: lidar_camera_calibration
install/lidar_camera_calibration/share/ament_index/resource_index/parent_prefix_path/: lidar_camera_calibration
install/lidar_camera_calibration/share/lidar_camera_calibration/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
lidar_camera_calibration/scripts/: saveToExtrinsics.py
log/: latest_build
scripts/: calibrate_camera_lidar.py
src/lidar_camera_calibration/: CMakeLists.txt
src/lidar_camera_calibration/calibration_data/lidar_camera_calibration/: R.npy
